WebRTC: Incorrect sdpMLineIndex for video breaks Firefox interop https://bugs.webkit.org/show_bug.cgi?id=173530

Patch by Youenn Fablet <youenn@apple.com> on 2017-07-12
Reviewed by Alex Christensen.

Source/WebCore:

Test: webrtc/ice-candidate-sdpMLineIndex.html

Reading missing parameter from libwebrtc backend and setting it when firing the RTCIceCandidate event.

* Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::disableICECandidateFiltering):
(WebCore::PeerConnectionBackend::newICECandidate):
* Modules/mediastream/PeerConnectionBackend.h:
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::OnIceCandidate):

LayoutTests:

* webrtc/ice-candidate-sdpMLineIndex-expected.txt: Added.
* webrtc/ice-candidate-sdpMLineIndex.html: Added.

Canonical link: https://commits.webkit.org/191234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219393 268f45cc-cd09-0410-ab3c-d52691b4dbfc