Source/WebCore/Modules/mediastream/PeerConnectionBackend.h
@@ -107,7 +107,7 @@ public:
 
     virtual void emulatePlatformEvent(const String& action) = 0;
 
-    void newICECandidate(String&& sdp, String&& mid);
+    void newICECandidate(String&& sdp, String&& mid, unsigned short sdpMLineIndex);
     void disableICECandidateFiltering();
     void enableICECandidateFiltering();
 
@@ -158,6 +158,7 @@ private:
         // Fields described in https://www.w3.org/TR/webrtc/#idl-def-rtcicecandidateinit.
         String sdp;
         String mid;
+        unsigned short sdpMLineIndex;
     };
     Vector<PendingICECandidate> m_pendingICECandidates;
 
